gcc/testsuite/rust/rustc/ui/type-alias-impl-trait/infinite-cycle-involving-weak.rs
#![feature(type_alias_impl_trait)]

type T = impl Copy;
// { dg-error ".E0720." "" { target *-*-* } .-1 }

static STATIC: T = None::<&'static T>;

fn main() {}

